books/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-worker
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: books-worker
  template:
    metadata:
      labels:
        app: books-worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/documentlane/doclane-worker:latest
