books/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-backend
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: books-backend
  template:
    metadata:
      labels:
        app: books-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/documentlane/books-backend:latest
---
apiVersion: v1
kind: Service
metadata:
  name: books-backend
spec:
  selector:
    app: books-backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
